# twitter

./: pyproject.toml
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/.github/workflows/: build.yml
backend/tweets/: tests.py  urls.py
backend/twitter_clone/: settings.py  urls.py
backend/users/: models.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_alter_user_managers.py
frontend/src/components/: Layout.tsx  Tweet.tsx  TweetBox.tsx
frontend/src/components/tweet/: Tweet.tsx  TweetList.tsx
frontend/src/hooks/: useAuth.ts  useTweets.ts
frontend/src/pages/: Login.tsx  Signup.tsx
frontend/src/routes/: index.tsx
tweets/: models.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py
twitter_clone/: settings.py  urls.py
users/: serializers.py  tests.py  views.py
